# src/main/java/com/lingo/craft/domain/detection/model/LanguageDetectionModel.java
@@ -3,6 +3,8 @@ package com.lingo.craft.domain.detection.model;
 import lombok.*;
 import org.apache.tika.language.detect.LanguageConfidence;
 
+import java.util.Map;
+
 @NoArgsConstructor
 @AllArgsConstructor
 @Getter
@@ -11,6 +13,8 @@ import org.apache.tika.language.detect.LanguageConfidence;
 public class LanguageDetectionModel {
     private String text;
     private String languageCode;
+    private String language;
     private LanguageConfidence confidence;
     private float rawScore;
+    private Map<String, String> metadata;
 }
